Fix wrong color

--- a/Frontend-Mentor/qr-code-component-main/styles/all.css
+++ b/Frontend-Mentor/qr-code-component-main/styles/all.css
@@ -3,7 +3,7 @@
 body {
     font-family: 'Outfit', sans-serif;
     font-size: 15px;
-    background-color: hsl(220, 15%, 55%);
+    background-color: hsl(212, 45%, 89%);
     /* display: flex;
       justify-content: center;
       align-items: center; 
@@ -48,6 +48,6 @@ h1 {
 }
 
 .info p {
-    color: hsl(212, 45%, 89%);
+    color: hsl(220, 15%, 55%);
     margin-top: 24px;
 }
